[gd_scene load_steps=9 format=3 uid="uid://d3p4cimwop1pv"]

[ext_resource type="Script" uid="uid://7jkns0g0fqr7" path="res://scenes/lose_menu.gd" id="1_p3vro"]
[ext_resource type="PackedScene" uid="uid://c4x5tkis316mh" path="res://scenes/colored_container.tscn" id="1_umd70"]
[ext_resource type="Script" uid="uid://bmx3ays57ef7r" path="res://scenes/focus_container.gd" id="2_p3vro"]
[ext_resource type="PackedScene" uid="uid://cbmn5tiw3fr6c" path="res://scenes/custom_label.tscn" id="3_mmnfx"]
[ext_resource type="PackedScene" uid="uid://d26hs8spvqyjy" path="res://scenes/custom_button.tscn" id="4_5i75y"]

[sub_resource type="Animation" id="Animation_sjwyb"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("colored_container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-720, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_3huio"]
resource_name = "lose"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("colored_container:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.709804)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-720, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.306698)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.306698)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sjwyb"]
_data = {
&"RESET": SubResource("Animation_sjwyb"),
&"lose": SubResource("Animation_3huio")
}

[node name="lose_menu" type="Control"]
z_index = 200
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_p3vro")

[node name="colored_container" parent="." instance=ExtResource("1_umd70")]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
color_role = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -720.0
offset_right = -720.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="colored_container" parent="MarginContainer" instance=ExtResource("1_umd70")]
layout_mode = 2
color_role = 5
outline_enabled = true
outline_color_role = 2
outline_thickness = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/colored_container"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LoseButtonContainer" type="VBoxContainer" parent="MarginContainer/colored_container/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_p3vro")
active = false

[node name="CustomLabel" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer" instance=ExtResource("3_mmnfx")]
layout_mode = 2
color_role = 2
font_size = 32
label_text = "You lost..."

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="CustomLabel2" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer/MarginContainer" instance=ExtResource("3_mmnfx")]
layout_mode = 2
color_role = 3
label_text = "You can do better next time!"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 10

[node name="restart" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer/MarginContainer2" instance=ExtResource("4_5i75y")]
z_index = 100
layout_mode = 2
bg_color = 5
focused_outline_removed = true
inverse_arrow_color = true
label_text = "Restart"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer"]
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_constants/margin_top = 0

[node name="quit" parent="MarginContainer/colored_container/MarginContainer/LoseButtonContainer/MarginContainer3" instance=ExtResource("4_5i75y")]
z_index = 100
layout_mode = 2
bg_color = 5
focused_outline_removed = true
inverse_arrow_color = true
label_text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sjwyb")
}

[connection signal="pressed" from="MarginContainer/colored_container/MarginContainer/LoseButtonContainer/MarginContainer2/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/colored_container/MarginContainer/LoseButtonContainer/MarginContainer3/quit" to="." method="_on_quit_pressed"]
